--- a/app/src/main/res/layout-v26/activity_maps.xml
+++ b/app/src/main/res/layout-v26/activity_maps.xml
@@ -32,6 +32,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:ems="10"
+        android:hint="@string/search"
         android:importantForAutofill="no"
         android:inputType="textPersonName" />
 
